--- a/components/Island.scss
+++ b/components/Island.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     background-color: var(--island-bg-color);
     box-shadow: var(--shadow-island);
-    border-radius: var(--border-radius-lg);
+    border-radius: var(--border-radius-);
     padding: calc(var(--padding) * var(--space-factor));
     position: relative;
     transition: box-shadow 0.5s ease-in-out;
