--- a/css/styles.scss
+++ b/css/styles.scss
@@ -292,6 +292,8 @@ body.excalidraw-cursor-resize * {
   .App-toolbar {
     display: flex;
     justify-content: center;
+    border-radius: 50px;
+    padding: 6px;
 
     .eraser {
       &.ToolIcon:hover {
@@ -350,7 +352,7 @@ body.excalidraw-cursor-resize * {
   }
 
   .App-menu_top {
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr;
     grid-gap: 1rem;
     align-items: flex-start;
     cursor: default;
