--- a/css/theme.scss
+++ b/css/theme.scss
@@ -14,7 +14,7 @@
   --button-special-active-bg-color: #{$color-green-0};
   --dialog-border-color: var(--color-gray-20);
   --dropdown-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="292.4" height="292.4" viewBox="0 0 292 292"><path d="M287 197L159 69c-4-3-8-5-13-5s-9 2-13 5L5 197c-3 4-5 8-5 13s2 9 5 13c4 4 8 5 13 5h256c5 0 9-1 13-5s5-8 5-13-1-9-5-13z"/></svg>');
-  --focus-highlight-color: #{$color-blue-2};
+  --focus-highlight-color: #7ba3bc;
   --icon-fill-color: var(--color-on-surface);
   --icon-green-fill-color: #{$color-green-9};
   --default-bg-color: #fff;
@@ -25,15 +25,15 @@
   --island-bg-color: #ffffff;
   --island-bg-color-alt: #fff;
   --keybinding-color: var(--color-gray-40);
-  --link-color: #{$color-blue-7};
-  --link-color-hover: #{$color-blue-8};
-  --link-color-active: #{$color-blue-2};
+  --link-color: #043d59;
+  --link-color-hover: #054a6b;
+  --link-color-active: #032638;
   --overlay-bg-color: #{color.adjust(#fff, $alpha: -0.12)};
   --popup-bg-color: var(--island-bg-color);
   --popup-secondary-bg-color: #{$color-gray-1};
   --popup-text-color: #000;
   --popup-text-inverted-color: #fff;
-  --select-highlight-color: #{$color-blue-5};
+  --select-highlight-color: #5a8fa8;
   --shadow-island: 0px 0px 0.9310142993927002px 0px rgba(0, 0, 0, 0.17),
     0px 0px 3.1270833015441895px 0px rgba(0, 0, 0, 0.08),
     0px 7px 14px 0px rgba(0, 0, 0, 0.05);
@@ -79,16 +79,16 @@
   --space-factor: 0.25rem;
   --text-primary-color: var(--color-on-surface);
 
-  --color-selection: #6965db;
+  --color-selection: #043d59;
 
   --color-icon-white: #fff;
 
-  --color-primary: #6965db;
-  --color-primary-darker: #5b57d1;
-  --color-primary-darkest: #4a47b1;
-  --color-primary-light: #e3e2fe;
-  --color-primary-light-darker: #d7d5ff;
-  --color-primary-hover: #5753d0;
+  --color-primary: #032638;
+  --color-primary-darker: #021d2b;
+  --color-primary-darkest: #011318;
+  --color-primary-light: #e6eef4;
+  --color-primary-light-darker: #c9dce8;
+  --color-primary-hover: #043d59;
 
   --color-gray-10: #f5f5f5;
   --color-gray-20: #ebebeb;
@@ -143,23 +143,22 @@
   --color-success-contrast-active: #6edf74;
 
   --color-logo-icon: var(--color-primary);
-  --color-logo-text: #190064;
+  --color-logo-text: #021d2b;
 
   --border-radius-md: 0.375rem;
   --border-radius-lg: 0.5rem;
 
-  --color-surface-high: #f1f0ff;
-  --color-surface-mid: #f6f6f9;
-  --color-surface-low: #ececf4;
+  --color-surface-high: #eef4f8;
+  --color-surface-mid: #f2f6f9;
+  --color-surface-low: #e8eef4;
   --color-surface-lowest: #ffffff;
   --color-on-surface: #1b1b1f;
-  --color-brand-hover: #5753d0;
-  --color-on-primary-container: #030064;
-  --color-surface-primary-container: #e0dfff;
-  --color-brand-active: #4440bf;
-  --color-border-outline: #767680;
-  --color-border-outline-variant: #c5c5d0;
-  --color-surface-primary-container: #e0dfff;
+  --color-brand-hover: #054a6b;
+  --color-on-primary-container: #021d2b;
+  --color-surface-primary-container: #dce8f0;
+  --color-brand-active: #043d59;
+  --color-border-outline: #6b7c8a;
+  --color-border-outline-variant: #b8c5ce;
 
   --color-badge: #0b6513;
   --background-color-badge: #d3ffd2;
@@ -194,7 +193,7 @@
     --button-special-active-bg-color: #204624;
     --dialog-border-color: var(--color-gray-80);
     --dropdown-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="292.4" height="292.4" viewBox="0 0 292 292"><path fill="%23ced4da" d="M287 197L159 69c-4-3-8-5-13-5s-9 2-13 5L5 197c-3 4-5 8-5 13s2 9 5 13c4 4 8 5 13 5h256c5 0 9-1 13-5s5-8 5-13-1-9-5-13z"/></svg>');
-    --focus-highlight-color: #{$color-blue-6};
+    --focus-highlight-color: #5a8fa8;
     --icon-green-fill-color: #{$color-green-4};
     --default-bg-color: #121212;
     --input-bg-color: #121212;
@@ -204,12 +203,12 @@
     --island-bg-color: #232329;
     --island-bg-color-alt: hsl(240, 12%, 12%);
     --keybinding-color: var(--color-gray-60);
-    --link-color: #{$color-blue-4};
+    --link-color: #7ba3bc;
     --overlay-bg-color: #{color.adjust($color-gray-8, $alpha: -0.88)};
     --popup-secondary-bg-color: #222;
     --popup-text-color: #{$color-gray-4};
     --popup-text-inverted-color: #2c2c2c;
-    --select-highlight-color: #{$color-blue-4};
+    --select-highlight-color: #5a8fa8;
     --shadow-island: 0px 0px 0.9310142993927002px 0px rgba(0, 0, 0, 0.17),
       0px 0px 3.1270833015441895px 0px rgba(0, 0, 0, 0.08),
       0px 7px 14px 0px rgba(0, 0, 0, 0.05);
@@ -225,19 +224,19 @@
     --scrollbar-thumb: #{$color-gray-8};
     --scrollbar-thumb-hover: #{$color-gray-7};
 
-    --color-slider-track: hsl(244, 23%, 39%);
+    --color-slider-track: hsl(202, 28%, 35%);
 
     // will be inverted to a lighter color.
-    --color-selection: #3530c4;
+    --color-selection: #0a6b9e;
 
     --color-icon-white: var(--color-gray-90);
 
-    --color-primary: #a8a5ff;
-    --color-primary-darker: #b2aeff;
-    --color-primary-darkest: #beb9ff;
-    --color-primary-light: #4f4d6f;
-    --color-primary-light-darker: #43415e;
-    --color-primary-hover: #bbb8ff;
+    --color-primary: #0a7ab5;
+    --color-primary-darker: #056899;
+    --color-primary-darkest: #04537a;
+    --color-primary-light: #033d59;
+    --color-primary-light-darker: #032638;
+    --color-primary-hover: #0d8ac9;
 
     --color-disabled: var(--color-gray-70);
 
@@ -265,19 +264,18 @@
     --color-muted-background: var(--color-gray-40);
     --color-muted-background-darker: var(--color-gray-20);
 
-    --color-logo-text: #e2dfff;
+    --color-logo-text: #c9e4f5;
 
-    --color-surface-high: #2e2d39;
-    --color-surface-low: hsl(240, 8%, 15%);
-    --color-surface-mid: hsl(240 6% 10%);
+    --color-surface-high: #2a3139;
+    --color-surface-low: hsl(205, 18%, 14%);
+    --color-surface-mid: hsl(205, 18%, 10%);
     --color-surface-lowest: hsl(0, 0%, 7%);
     --color-on-surface: #e3e3e8;
-    --color-brand-hover: #bbb8ff;
-    --color-on-primary-container: #e0dfff;
-    --color-surface-primary-container: #403e6a;
-    --color-brand-active: #d0ccff;
-    --color-border-outline: #8e8d9c;
-    --color-border-outline-variant: #46464f;
-    --color-surface-primary-container: #403e6a;
+    --color-brand-hover: #7ba3bc;
+    --color-on-primary-container: #c9e4f5;
+    --color-surface-primary-container: #1a2d3d;
+    --color-brand-active: #5a8fa8;
+    --color-border-outline: #6b7c8a;
+    --color-border-outline-variant: #3d4a54;
   }
 }
