changed shapes default attributes

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -53,7 +53,7 @@
   --scrollbar-thumb: var(--button-gray-2);
   --scrollbar-thumb-hover: var(--button-gray-3);
 
-  --color-slider-track: hsl(240, 100%, 90%);
+  --color-slider-track: var(--color-brand-active);
   --color-slider-thumb: var(--color-gray-80);
 
   --modal-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
@@ -148,14 +148,14 @@
   --border-radius-md: 0.375rem;
   --border-radius-lg: 0.5rem;
 
-  --color-surface-high: #eef4f8;
-  --color-surface-mid: #f2f6f9;
-  --color-surface-low: #e8eef4;
-  --color-surface-lowest: #ffffff;
+  --color-surface-high: #E1DFDD;
+  --color-surface-mid: #E1DFDD;
+  --color-surface-low: #F2F1F0;
+  --color-surface-lowest: #F9F8F8;
   --color-on-surface: #1b1b1f;
   --color-brand-hover: #054a6b;
   --color-on-primary-container: #021d2b;
-  --color-surface-primary-container: #dce8f0;
+  --color-surface-primary-container: #F2F1F0;
   --color-brand-active: #043d59;
   --color-border-outline: #6b7c8a;
   --color-border-outline-variant: #b8c5ce;
