--- a/packages/excalidraw/components/ToolIcon.scss
+++ b/packages/excalidraw/components/ToolIcon.scss
@@ -170,29 +170,86 @@
   }
 
   .App-toolbar-container {
+    .ToolIcon_type_radio:checked + .ToolIcon__icon,
+    .ToolIcon_type_checkbox:checked + .ToolIcon__icon {
+      --icon-fill-color: none;
+
+      svg {
+        color: var(--color-on-surface);
+        fill: none !important;
+      }
+    }
+
     .ToolIcon__icon {
-      width: var(--lg-button-size);
-      height: var(--lg-button-size);
+      width: 2.75rem;
+      height: 2.75rem;
+      border-radius: 50%;
+
+      &:hover {
+        background: var(--color-surface-lowest);
+      }
+
+      &:active {
+        background: var(--color-surface-lowest);
+      }
 
       @media screen and (max-width: 450px) {
-        width: 1.8rem;
-        height: 1.8rem;
+        width: 2.25rem;
+        height: 2.25rem;
       }
       @media screen and (max-width: 379px) {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 2rem;
+        height: 2rem;
       }
 
       svg {
-        width: var(--lg-icon-size);
-        height: var(--lg-icon-size);
+        width: 1.375rem;
+        height: 1.375rem;
+
+        @media screen and (max-width: 450px) {
+          width: 1.125rem;
+          height: 1.125rem;
+        }
+        @media screen and (max-width: 379px) {
+          width: 1rem;
+          height: 1rem;
+        }
+
+        &.ToolIcon__sticky-note-icon {
+          width: 2rem;
+          height: 2rem;
+
+          @media screen and (max-width: 450px) {
+            width: 1.75rem;
+            height: 1.75rem;
+          }
+          @media screen and (max-width: 379px) {
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+        }
       }
+    }
+
+    .excalidraw.theme--dark & .ToolIcon__icon:hover,
+    .excalidraw.theme--dark & .ToolIcon__icon:active {
+      background: var(--color-surface-high);
     }
 
     .ToolIcon__LaserPointer .ToolIcon__icon,
     .ToolIcon__MagicButton .ToolIcon__icon {
-      width: var(--default-button-size);
-      height: var(--default-button-size);
+      width: 2.75rem;
+      height: 2.75rem;
+      border-radius: 50%;
+
+      @media screen and (max-width: 450px) {
+        width: 2.25rem;
+        height: 2.25rem;
+      }
+      @media screen and (max-width: 379px) {
+        width: 2rem;
+        height: 2rem;
+      }
     }
   }
 }
